--- a/index.html
+++ b/index.html
@@ -126,8 +126,13 @@
 
 <script>
   const preguntas = [
-    { pregunta: "¿Cuál es el principal objetivo de un acueducto?", opciones: ["Transportar agua potable", "Drenar aguas residuales", "Regular la presión", "Evitar inundaciones"], correcta: 0 },
-    { pregunta: "¿Qué tratamiento se aplica primero en una planta de agua potable?", opciones: ["Filtración", "Cloración", "Sedimentación", "Aireación"], correcta: 2 }
+    { pregunta: "¿Cuál es el principal objetivo de un acueducto?", opciones: ["Transportar agua potable", "Drenar aguas residuales", "Regular la presión", "Evitar inundaciones"], correcta: 0 }, // Correcta: Transportar agua potable
+    { pregunta: "¿Qué tratamiento se aplica primero en una planta de agua potable?", opciones: ["Filtración", "Cloración", "Sedimentación", "Aireación"], correcta: 2 }, // Correcta: Sedimentación
+    { pregunta: "¿Cuál de estos es un método común de desinfección del agua?", opciones: ["Evaporación", "Ozonización", "Fermentación", "Filtración"], correcta: 1 }, // Correcta: Ozonización
+    { pregunta: "¿Cuál es la principal fuente de agua potable en la mayoría de las ciudades?", opciones: ["Océanos", "Acuíferos y ríos", "Lagos salinos", "Lluvia"], correcta: 1 }, // Correcta: Acuíferos y ríos
+    { pregunta: "¿Qué gas se usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }, // Correcta: Cloro
+    { pregunta: "¿Qué infraestructura se usa para almacenar agua potable antes de su distribución?", opciones: ["Tuberías", "Estanques de sedimentación", "Tanques de almacenamiento", "Bombas"], correcta: 2 }, // Correcta: Tanques de almacenamiento
+    { pregunta: "¿Cuál es el objetivo del proceso de filtración en una planta de tratamiento?", opciones: ["Eliminar bacterias", "Reducir turbidez", "Oxigenar el agua", "Agregar minerales"], correcta: 1 } // Correcta: Reducir turbidez
   ];
 
   let nivel = 0;
