--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
       border-radius: 10px;
       color: white;
       cursor: pointer;
-      transition: transform 0.2s;
+      transition: background 0.3s, transform 0.2s;
     }
 
     .option:hover {
-      background: #005bb5;
       transform: scale(1.05);
     }
 
-    #timer {
+    #puntaje, #timer {
       font-size: 20px;
-      color: yellow;
+      font-weight: bold;
       margin: 10px 0;
     }
 
@@ -59,19 +58,6 @@
       font-size: 20px;
       color: #00ff99;
       animation: fadeIn 0.5s ease-in-out;
-    }
-
-    #level {
-      font-size: 18px;
-      font-weight: bold;
-      color: #00ffcc;
-      margin-bottom: 10px;
-    }
-
-    #streak {
-      color: gold;
-      font-size: 18px;
-      margin-top: 10px;
     }
 
     #restart {
@@ -108,7 +94,7 @@
 <div id="game-container">
   <h1>Quién Quiere Ser Millonario</h1>
   <h2>Especial: Acueductos</h2>
-  <p id="level"></p>
+  <p id="puntaje">Puntos: 0</p>
   <p id="timer">Tiempo: 30s</p>
   <p class="question" id="question"></p>
   <button class="option" id="opt1"></button>
@@ -116,7 +102,6 @@
   <button class="option" id="opt3"></button>
   <button class="option" id="opt4"></button>
   <p id="result"></p>
-  <p id="streak"></p>
   <button id="restart" onclick="reiniciarJuego()">Reiniciar Juego</button>
 </div>
 
@@ -126,38 +111,59 @@
 
 <script>
   const preguntas = [
-    { pregunta: "¿Cuál es el principal objetivo de un acueducto?", opciones: ["Transportar agua potable", "Drenar aguas residuales", "Regular la presión", "Evitar inundaciones"], correcta: 0 }, // Correcta: Transportar agua potable
-    { pregunta: "¿Qué tratamiento se aplica primero en una planta de agua potable?", opciones: ["Filtración", "Cloración", "Sedimentación", "Aireación"], correcta: 2 }, // Correcta: Sedimentación
-    { pregunta: "¿Cuál de estos es un método común de desinfección del agua?", opciones: ["Evaporación", "Ozonización", "Fermentación", "Filtración"], correcta: 1 }, // Correcta: Ozonización
-    { pregunta: "¿Cuál es la principal fuente de agua potable en la mayoría de las ciudades?", opciones: ["Océanos", "Acuíferos y ríos", "Lagos salinos", "Lluvia"], correcta: 1 }, // Correcta: Acuíferos y ríos
-    { pregunta: "¿Qué gas se usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }, // Correcta: Cloro
-    { pregunta: "¿Qué infraestructura se usa para almacenar agua potable antes de su distribución?", opciones: ["Tuberías", "Estanques de sedimentación", "Tanques de almacenamiento", "Bombas"], correcta: 2 }, // Correcta: Tanques de almacenamiento
-    { pregunta: "¿Cuál es el objetivo del proceso de filtración en una planta de tratamiento?", opciones: ["Eliminar bacterias", "Reducir turbidez", "Oxigenar el agua", "Agregar minerales"], correcta: 1 } // Correcta: Reducir turbidez
+    { pregunta: "¿Cuál es el principal objetivo de un acueducto?", opciones: ["Transportar agua potable", "Drenar aguas residuales", "Regular la presión", "Evitar inundaciones"], correcta: 0 }, 
+    { pregunta: "¿Qué tratamiento se aplica primero en una planta de agua potable?", opciones: ["Filtración", "Cloración", "Sedimentación", "Aireación"], correcta: 2 }, 
+    { pregunta: "¿Cuál de estos es un método común de desinfección del agua?", opciones: ["Evaporación", "Ozonización", "Fermentación", "Filtración"], correcta: 1 }, 
+    { pregunta: "¿Cuál es la principal fuente de agua potable en la mayoría de las ciudades?", opciones: ["Océanos", "Acuíferos y ríos", "Lagos salinos", "Lluvia"], correcta: 1 }, 
+    { pregunta: "¿Qué gas se usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
   ];
 
   let nivel = 0;
   let puntaje = 0;
+  let tiempoRestante = 30;
+  let temporizador;
+
+  function iniciarTemporizador() {
+    tiempoRestante = 30;
+    document.getElementById("timer").textContent = `Tiempo: ${tiempoRestante}s`;
+
+    temporizador = setInterval(() => {
+      tiempoRestante--;
+      document.getElementById("timer").textContent = `Tiempo: ${tiempoRestante}s`;
+      
+      if (tiempoRestante === 0) {
+        document.getElementById("sonido-tiempo").play();
+        clearInterval(temporizador);
+        siguientePregunta();
+      }
+    }, 1000);
+  }
 
   function cargarPregunta() {
     if (nivel < preguntas.length) {
       document.getElementById("question").textContent = preguntas[nivel].pregunta;
       document.getElementById("puntaje").textContent = `Puntos: ${puntaje}`;
+
       preguntas[nivel].opciones.forEach((op, i) => {
         const btn = document.getElementById("opt" + (i + 1));
         btn.textContent = op;
-        btn.style.backgroundColor = "#0074D9"; // Restablecer color
+        btn.style.backgroundColor = "#0074D9"; 
         btn.disabled = false;
         btn.onclick = () => verificarRespuesta(i, btn);
       });
+
       document.getElementById("result").textContent = "";
+      iniciarTemporizador();
     } else {
-      document.getElementById("result").textContent = `🎉 ¡Felicidades! Eres un Asesor Experto. Puntos finales: ${puntaje} 🎉`;
+      document.getElementById("result").textContent = `🎉 ¡Felicidades! Puntos finales: ${puntaje} 🎉`;
       document.getElementById("restart").style.display = "block";
     }
   }
 
   function verificarRespuesta(seleccionada, boton) {
+    clearInterval(temporizador);
     desactivarBotones();
+
     if (seleccionada === preguntas[nivel].correcta) {
       document.getElementById("sonido-correcto").play();
       boton.style.backgroundColor = "green";
@@ -167,10 +173,12 @@
       boton.style.backgroundColor = "red";
     }
 
-    setTimeout(() => {
-      nivel++;
-      cargarPregunta();
-    }, 1000);
+    setTimeout(() => siguientePregunta(), 1000);
+  }
+
+  function siguientePregunta() {
+    nivel++;
+    cargarPregunta();
   }
 
   function desactivarBotones() {
@@ -188,7 +196,6 @@
 
   cargarPregunta();
 </script>
-
 
 </body>
 </html>
