--- a/index.html
+++ b/index.html
@@ -13,63 +13,15 @@
       margin: 0;
     }
 
-    #inicio-container {
-      background: rgba(0, 0, 0, 0.8);
-      padding: 50px;
-      max-width: 600px;
-      margin: 150px auto;
-      border-radius: 15px;
-      box-shadow: 0 0 20px #00dffc;
-      animation: fadeIn 1s ease;
-    }
-
-    #inicio-container h1 {
-      font-size: 30px;
-    }
-
-    #btn-iniciar {
-      padding: 15px 30px;
-      font-size: 18px;
-      background: #28a745;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-
-    #btn-iniciar:hover {
-      background: #218838;
-    }
-
-    #game-container {
-      display: none;
-      background: rgba(0, 0, 0, 0.8);
+    .blur-container {
+      background: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(10px);
       padding: 30px;
       max-width: 600px;
       margin: 90px auto;
       border-radius: 15px;
       box-shadow: 0 0 20px #00dffc;
       animation: fadeIn 1s ease;
-      position: relative;
-    }
-
-    #timer {
-      font-size: 18px;
-      font-weight: bold;
-      color: yellow;
-      position: absolute;
-      top: 10px;
-      left: 15px;
-    }
-
-    #puntaje {
-      font-size: 18px;
-      font-weight: bold;
-      color: gold;
-      position: absolute;
-      top: 10px;
-      right: 15px;
     }
 
     .question {
@@ -89,11 +41,28 @@
       border-radius: 10px;
       color: white;
       cursor: pointer;
-      transition: background 0.3s, transform 0.2s;
+      transition: transform 0.2s, background 0.3s;
     }
 
     .option:hover {
+      background: #005bb5;
       transform: scale(1.05);
+    }
+
+    #timer {
+      font-size: 18px;
+      color: yellow;
+      position: absolute;
+      top: 20px;
+      left: 30px;
+    }
+
+    #points {
+      font-size: 18px;
+      color: lightgreen;
+      position: absolute;
+      top: 20px;
+      right: 30px;
     }
 
     #result {
@@ -103,20 +72,40 @@
       animation: fadeIn 0.5s ease-in-out;
     }
 
-    #restart {
+    #level {
+      font-size: 18px;
+      font-weight: bold;
+      color: #00ffcc;
+      margin-bottom: 10px;
+    }
+
+    .hidden {
       display: none;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background: crimson;
+    }
+
+    #start-screen, #final-screen {
+      text-align: center;
+      padding: 40px;
+      max-width: 500px;
+      margin: 120px auto;
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      box-shadow: 0 0 30px #00dffc;
+    }
+
+    #start-screen button, #final-screen button {
+      padding: 12px 24px;
+      font-size: 18px;
+      background: #28a745;
       color: white;
-      font-size: 16px;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
     }
 
-    #restart:hover {
-      background: darkred;
+    #start-screen button:hover, #final-screen button:hover {
+      background: #218838;
     }
 
     @keyframes pulse {
@@ -134,24 +123,28 @@
 
 <audio id="musica-fondo" src="AUDIO.MP3.mp3" loop autoplay></audio>
 
-<!-- Pantalla de inicio -->
-<div id="inicio-container">
+<div id="start-screen">
   <h1>Quién Quiere Ser Millonario</h1>
   <h2>Especial: Acueductos</h2>
-  <button id="btn-iniciar" onclick="iniciarJuego()">Iniciar Juego</button>
+  <button onclick="iniciarJuego()">Iniciar Juego</button>
 </div>
 
-<!-- Pantalla del juego -->
-<div id="game-container">
-  <p id="timer">Tiempo: 30s</p>
-  <p id="puntaje">Puntos: 0</p>
+<div id="game-container" class="blur-container hidden">
+  <div id="timer">Tiempo: 30s</div>
+  <div id="points">Puntos: 0</div>
+  <p id="level"></p>
   <p class="question" id="question"></p>
   <button class="option" id="opt1"></button>
   <button class="option" id="opt2"></button>
   <button class="option" id="opt3"></button>
   <button class="option" id="opt4"></button>
   <p id="result"></p>
-  <button id="restart" onclick="reiniciarJuego()">Reiniciar Juego</button>
+</div>
+
+<div id="final-screen" class="hidden">
+  <h2>🎉 ¡Felicidades! 🎉</h2>
+  <p id="final-points"></p>
+  <button onclick="volverInicio()">Volver al Inicio</button>
 </div>
 
 <audio id="sonido-correcto" src="correcto.mp3"></audio>
@@ -160,76 +153,99 @@
 
 <script>
   const preguntas = [
-    { pregunta: "¿Cuál es el principal objetivo de un acueducto?", opciones: ["Transportar agua potable", "Drenar aguas residuales", "Regular la presión", "Evitar inundaciones"], correcta: 0 }, 
-    { pregunta: "¿Qué tratamiento se aplica primero en una planta de agua potable?", opciones: ["Filtración", "Cloración", "Sedimentación", "Aireación"], correcta: 2 }, 
-    { pregunta: "¿Cuál de estos es un método común de desinfección del agua?", opciones: ["Evaporación", "Ozonización", "Fermentación", "Filtración"], correcta: 1 }, 
-    { pregunta: "¿Cuál es la principal fuente de agua potable en la mayoría de las ciudades?", opciones: ["Océanos", "Acuíferos y ríos", "Lagos salinos", "Lluvia"], correcta: 1 }, 
-    { pregunta: "¿Qué gas se usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
+    { pregunta: "¿Cuál es el principal objetivo de un acueducto?", opciones: ["Transportar agua potable", "Drenar aguas residuales", "Regular la presión", "Evitar inundaciones"], correcta: 0 },
+    { pregunta: "¿Qué tratamiento se aplica primero en una planta de agua potable?", opciones: ["Filtración", "Cloración", "Sedimentación", "Aireación"], correcta: 2 },
+    { pregunta: "¿Qué elemento elimina microorganismos del agua?", opciones: ["Ozono", "Arena", "Hierro", "Cal"], correcta: 0 },
+    { pregunta: "¿Cuál es el nivel óptimo de cloro en agua potable?", opciones: ["0.2-0.5 mg/L", "1.0-1.5 mg/L", "2.0-3.0 mg/L", "5.0 mg/L"], correcta: 0 },
+    { pregunta: "¿Qué tipo de tubería es más usada en zonas rurales?", opciones: ["PVC", "Hierro galvanizado", "Cobre", "Polietileno"], correcta: 3 }
   ];
 
   let nivel = 0;
-  let puntaje = 0;
+  let puntos = 0;
   let tiempoRestante = 30;
   let temporizador;
 
   function iniciarJuego() {
-    document.getElementById("inicio-container").style.display = "none";
-    document.getElementById("game-container").style.display = "block";
+    document.getElementById("start-screen").classList.add("hidden");
+    document.getElementById("game-container").classList.remove("hidden");
+    puntos = 0;
+    nivel = 0;
     cargarPregunta();
-  }
-
-  function iniciarTemporizador() {
-    tiempoRestante = 30;
-    document.getElementById("timer").textContent = `Tiempo: ${tiempoRestante}s`;
-
-    temporizador = setInterval(() => {
-      tiempoRestante--;
-      document.getElementById("timer").textContent = `Tiempo: ${tiempoRestante}s`;
-      
-      if (tiempoRestante === 0) {
-        document.getElementById("sonido-tiempo").play();
-        clearInterval(temporizador);
-        siguientePregunta();
-      }
-    }, 1000);
   }
 
   function cargarPregunta() {
     if (nivel < preguntas.length) {
       document.getElementById("question").textContent = preguntas[nivel].pregunta;
-      document.getElementById("puntaje").textContent = `Puntos: ${puntaje}`;
-
       preguntas[nivel].opciones.forEach((op, i) => {
         const btn = document.getElementById("opt" + (i + 1));
         btn.textContent = op;
-        btn.style.backgroundColor = "#0074D9";
+        btn.className = "option";
         btn.disabled = false;
-        btn.onclick = () => verificarRespuesta(i, btn);
+        btn.onclick = () => verificarRespuesta(i);
       });
-
-      iniciarTemporizador();
+      document.getElementById("result").textContent = "";
+      document.getElementById("points").textContent = "Puntos: " + puntos;
+      tiempoRestante = 30;
+      actualizarTimer();
     } else {
-      document.getElementById("result").textContent = `🎉 ¡Felicidades! Puntos finales: ${puntaje} 🎉`;
-      document.getElementById("restart").style.display = "block";
+      mostrarFinal();
     }
   }
 
-  function verificarRespuesta(seleccionada, boton) {
+  function verificarRespuesta(seleccionada) {
+    desactivarBotones();
+    const correcta = preguntas[nivel].correcta;
+    const btnCorrecta = document.getElementById("opt" + (correcta + 1));
+    btnCorrecta.classList.add("correcta");
+    if (seleccionada === correcta) {
+      document.getElementById("sonido-correcto").play();
+      document.getElementById("opt" + (seleccionada + 1)).style.background = 'green';
+      puntos += 10;
+    } else {
+      document.getElementById("sonido-incorrecto").play();
+      document.getElementById("opt" + (seleccionada + 1)).style.background = 'red';
+    }
+    document.getElementById("points").textContent = "Puntos: " + puntos;
     clearInterval(temporizador);
-    boton.style.backgroundColor = (seleccionada === preguntas[nivel].correcta) ? "green" : "red";
-    if (seleccionada === preguntas[nivel].correcta) puntaje += 10;
-    setTimeout(() => siguientePregunta(), 1000);
+    setTimeout(() => {
+      nivel++;
+      cargarPregunta();
+    }, 2000);
   }
 
-  function siguientePregunta() { nivel++; cargarPregunta(); }
-  function reiniciarJuego() {
-  nivel = 0;
-  puntaje = 0;
-  document.getElementById("result").textContent = ""; // Limpia mensaje final
-  document.getElementById("restart").style.display = "none";
-  cargarPregunta();
-}
+  function desactivarBotones() {
+    for (let i = 1; i <= 4; i++) {
+      document.getElementById("opt" + i).disabled = true;
+    }
+  }
 
+  function actualizarTimer() {
+    document.getElementById("timer").textContent = "Tiempo: " + tiempoRestante + "s";
+    temporizador = setInterval(() => {
+      tiempoRestante--;
+      document.getElementById("timer").textContent = "Tiempo: " + tiempoRestante + "s";
+      if (tiempoRestante <= 0) {
+        clearInterval(temporizador);
+        document.getElementById("sonido-tiempo").play();
+        desactivarBotones();
+        setTimeout(() => {
+          nivel++;
+          cargarPregunta();
+        }, 1000);
+      }
+    }, 1000);
+  }
+
+  function mostrarFinal() {
+    document.getElementById("game-container").classList.add("hidden");
+    document.getElementById("final-screen").classList.remove("hidden");
+    document.getElementById("final-points").textContent = `Puntos finales: ${puntos}`;
+  }
+
+  function volverInicio() {
+    document.getElementById("final-screen").classList.add("hidden");
+    document.getElementById("start-screen").classList.remove("hidden");
+  }
 </script>
 
 </body>
