--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
     { pregunta: "¿Qué tratamiento se aplica primero en una planta de agua potable?", opciones: ["Filtración", "Cloración", "Sedimentación", "Aireación"], correcta: 2 }, 
     { pregunta: "¿Cuál de estos es un método común de desinfección del agua?", opciones: ["Evaporación", "Ozonización", "Fermentación", "Filtración"], correcta: 1 }, 
     { pregunta: "¿Cuál es la principal fuente de agua potable en la mayoría de las ciudades?", opciones: ["Océanos", "Acuíferos y ríos", "Lagos salinos", "Lluvia"], correcta: 1 }, 
-    { pregunta: "¿Qué gas se usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gas se usa comúnr el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Que usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gas se usa comúnmente p el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qu usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gas se usa comúnmente para gua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gas se ute para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gas se usa comúnmenesinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gas se usaara desinfectar el table?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gas se usa coara desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
-    { pregunta: "¿Qué gusa comúnmente parnfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 }
+    { pregunta: "¿Qué gas se usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gas se usa comúnr el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Que usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gas se usa comúnmente p el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qu usa comúnmente para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gas se usa comúnmente para gua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gas se ute para desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gas se usa comúnmenesinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gas se usaara desinfectar el table?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gas se usa coara desinfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
+    { pregunta: "¿Qué gusa comúnmente parnfectar el agua potable?", opciones: ["Oxígeno", "Dióxido de carbono", "Cloro", "Nitrógeno"], correcta: 2 },
   
   ];
 
